modules/aws-client-utility/data/ec2_DescribeSecurityGroups_eu-west-1_None.json
{"service": "ec2", "region": "eu-west-1", "profile": null, "operation": "DescribeSecurityGroups", "response": {"SecurityGroups": [{"Description": "This security group was generated by AWS Marketplace and is based on recommended settings for OpenVPN Access Server version 2.7.5 provided by OpenVPN Inc", "GroupName": "OpenVPN Access Server-2-7-5-AutogenByAWSMP-", "IpPermissions": [{"FromPort": 1194, "IpProtocol": "udp", "IpRanges": [{"CidrIp": "0.0.0.0/0"}], "Ipv6Ranges": [], "PrefixListIds": [], " [...]
